--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "mocha": "./node_modules/bin/mocha",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +22,8 @@
     "express-session": "^1.17.0",
     "express-sessions": "^1.0.6",
     "pg": "^7.12.1"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0"
   }
 }
