--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ node_js:
   - "8.10.0"
 
 before_script:
-  - psql -c 'create database registration-test;' -U postgres
-  - psql -U postgres -d registration-opp -a -f registration.sql
+  - psql -c 'create database registration_test;' -U postgres
+  - psql -U postgres -d registration_test -a -f registration.sql
 
 services:
   - postgresql
